fix overflow text when ellipsis and show tooltip

--- a/src/styles/app-modal/app-dialog/AppDialog.scss
+++ b/src/styles/app-modal/app-dialog/AppDialog.scss
@@ -41,9 +41,6 @@ $animation-duration: 300ms;
     align-items: center;
     margin-bottom: 16px;
     gap: 20px;
-    box-sizing: border-box;
-
-    //width: 100%;
 
     .app-dialog__close-button {
       margin-left: auto;
