--- a/src/styles/app-tooltip/AppTooltip.scss
+++ b/src/styles/app-tooltip/AppTooltip.scss
@@ -32,7 +32,6 @@ $animation-duration: 200ms;
   }
 
   &__wrapper {
-    max-width: 100%;
     position: relative;
     display: block;
   }
